<resources>
    <string name="app_name">TrotoTrack</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">MapsActivity</string>

    <string name="welcomeText1">Protect Your Path, \nProtect Yourself</string>
    <string name="welcomeText2">Trusted Sidewalk \nSecurity Detection</string>
    <string name="loginText">Login</string>
    <string name="signinText">Sign in</string>
    <string name="appLogo">App Logo</string>

    <string name="loginPageText1">Login to your account</string>
    <string name="loginPageText2">Please enter account data</string>
    <string name="emailText">Email</string>
    <string name="passwordText">Password</string>
    <string name="emailHint">user@gmail.com</string>
    <string name="passwordHint">********</string>

    <string name="signinText1">Create your account</string>
    <string name="signinText2">Please enter account data</string>
    <string name="nameHint">user</string>
    <string name="usernameHint">user123</string>
    <string name="usernameText">Username</string>
    <string name="passwordConfirmationText">Password Confirmation</string>
    <string name="homeText1">Welcome</string>
    <string name="trototracker">TrotoTracker</string>
    <string name="homeText2">Find the safest and most comfortable sidewalks for every trip.</string>
    <string name="line">line</string>
    <string name="slider_image">Slider Image</string>
    <string name="articlesText">Articles</string>
    <string name="account_button">Account Button</string>
    <string name="toolsText">Tools</string>
    <string name="tools_logo">Tools Logo</string>
    <string name="toolsText1">Scan the sidewalk condition before walking and reporting</string>
    <string name="tools_image">Tools Image</string>
    <string name="trotoscan">TrotoScan!</string>
    <string name="image_holder">Image Holder</string>
    <string name="cameraText">Camera</string>
    <string name="analyzeText">Analyze</string>
    <string name="toolsText2">Use the scan feature to find out the quality of the sidewalk before walking.</string>
    <string name="report_image">Report Image</string>
    <string name="reportStatus">Status</string>
    <string name="reportStatusDamage">Status damage</string>
    <string name="reportLocation">Location</string>
    <string name="reportDate">Created at</string>
    <string name="vote">0</string>
    <string name="descriptionText">Description</string>
    <string name="article_image">Article Image</string>
    <string name="articleTitle">Title Article</string>
    <string name="scanResult">RESULT</string>
    <string name="backButton">Back</string>
    <string name="reportButton">Report</string>
    <string name="descriptionResult">Deskripsi … Lorem ipsum dolor sit amet, consectetur adipiscing elit …</string>
    <string name="result_image">Result Image</string>
    <string name="locationText">Location</string>
    <string name="addReportText">Enter Report Data</string>
    <string name="photoText">Photo Evidence</string>
    <string name="submit">Submit</string>
    <string name="maps_button">Maps Button</string>
    <string name="addressText">Location Details</string>
    <string name="reportDescriptionHint">Additional Information…</string>
    <string name="addressHint">e.g. In front of mosque</string>
    <string name="locationHint">e.g. 123 Main St, City, Country</string>
    <string name="detailLocationText">Location :</string>
    <string name="detailDescriptionText">Description :</string>
    <string name="check_location">Check Location</string>
    <string name="accountName">Name :</string>
    <string name="name">User</string>
    <string name="accountUsername">Username :</string>
    <string name="accountEmail">Email :</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="log_out">Log Out</string>
    <string name="homeNavigation">Home</string>
    <string name="toolsNavigation">Tools</string>
    <string name="historyNavigation">History</string>
    <string name="nameText">Name</string>
    <string name="voteText">Vote</string>
    <string name="vote_button">Vote Button</string>
    <string name="searchBar">Search Report…</string>
    <string name="articleDate">articleDate</string>
    <string name="galleryText">Gallery</string>
    <string name="newPasswordText">Please enter your new password</string>
    <string name="enterEmailText">Enter your email</string>
    <string name="resendOtp">Resend OTP</string>
    <string name="verify">Verify</string>
    <string name="verifyOtpText">Enter the OTP code</string>
    <string name="confirm">Confirm</string>
    <string name="confirmationText">Thank you for using our application. Click the button below to check the results in more detail</string>
    <string name="password_image">Password Image</string>
    <string name="otp_image">Otp Image</string>
    <string name="pilih_lokasi_laporan">Pilih Lokasi Laporan</string>
    <string name="empty">…</string>
    <string name="reasontext">reasonText</string>
    <string name="reportreason">reportReason</string>
    <string name="locationbutton">locationButton</string>
    <string name="jobNavigation">Job</string>
    <string name="trotojob">TrotoJobs</string>
    <string name="file_button">file_button</string>
    <string name="job_image">job_image</string>
    <string name="jobPageText">"Are you skilled in construction and passionate about making a difference in your community? Join our team and repair damaged sidewalks, enhancing the safety to create a better environment for our city's pedestrians. Apply now and be a part of our mission to improve urban living!"</string>
    <string name="apply">Apply</string>
    <string name="checkApplication">Check Application</string>
    <string name="jobPageText2">Enter Your Personal Data</string>
    <string name="nikText">NIK</string>
    <string name="phoneText">Phone Number</string>
    <string name="cvText">CV</string>
    <string name="nameText2">Name :</string>
    <string name="nikText2">NIK :</string>
    <string name="addressText2">Address :</string>
    <string name="phoneText2">Phone :</string>
    <string name="fileText2">File :</string>
    <string name="download">Download</string>
    <string name="jobStatus">jobStatus</string>
    <string name="statusText">Status :</string>
    <string name="forget_password">Forget Password?</string>
    <string name="all_report">All Report</string>
    <string name="my_report">My Report</string>
    <string name="report">Report</string>
    <string name="send">Send</string>
    <string name="update_image">update_image</string>
    <string name="address">Address</string>
</resources>