<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.welcome.WelcomeActivity">

    <View
        android:id="@+id/backgroundView"
        android:layout_width="0dp"
        android:layout_height="525dp"
        android:background="@drawable/rounded_corner2"
        android:backgroundTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/AppLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:src="@drawable/app_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/appLogo" />

    <TextView
        android:id="@+id/AppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/AppLogo"
        app:layout_constraintStart_toStartOf="@id/AppLogo"
        app:layout_constraintEnd_toEndOf="@id/AppLogo"/>

    <TextView
        android:id="@+id/Text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="92dp"
        android:text="@string/welcomeText1"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/View1"
        app:layout_constraintEnd_toStartOf="@+id/View1"
        app:layout_constraintTop_toTopOf="@+id/View1"
        app:layout_constraintVertical_bias="0.466" />

    <TextView
        android:id="@+id/Text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:text="@string/welcomeText2"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/View2"
        app:layout_constraintStart_toEndOf="@+id/View2"
        app:layout_constraintTop_toTopOf="@+id/View2"
        app:layout_constraintVertical_bias="0.466" />

    <View
        android:id="@+id/View1"
        android:layout_width="10dp"
        android:layout_height="60dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="68dp"
        android:background="@drawable/rounded_corner"
        android:backgroundTint="#F49004"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/AppName" />

    <View
        android:id="@+id/View2"
        android:layout_width="10dp"
        android:layout_height="60dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_corner"
        android:backgroundTint="#F49004"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/View1" />

    <Button
        android:id="@+id/LoginButton"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/yellow"
        android:text="@string/loginText"
        app:layout_constraintBottom_toTopOf="@+id/SignInButton"
        app:layout_constraintEnd_toEndOf="@+id/SignInButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/SignInButton" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/SignInButton"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginBottom="36dp"
        android:text="@string/signinText"
        android:textColor="@color/yellow"
        android:textSize="15sp"
        app:backgroundTint="@android:color/transparent"
        app:cornerRadius="30dp"
        app:strokeColor="@color/yellow"
        app:strokeWidth="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.559"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
